--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "~6.0",
+        "maatwebsite/excel": "~2.1.0"
     },
     "autoload": {
         "classmap": [
